--- a/tool/index.html
+++ b/tool/index.html
@@ -235,8 +235,9 @@
         case 'choice':
           xScale = d3.scale.ordinal().rangeRoundPoints([0, width]);
           break;
+        // Using 'text' to affect salary questions.
         case 'text':
-          xScale = d3.scale.linear().range([0, width]);
+          xScale = d3.scale.linear().range([0, width]).clamp(true);
           break;
         default:
           console.error("Unable to choose proper d3.scale for the Question 1's type.")
@@ -248,8 +249,9 @@
         case 'choice':
           yScale = d3.scale.ordinal().rangeRoundPoints([height, 0]);
           break;
+        // Using 'text' to affect salary questions.
         case 'text':
-          yScale = d3.scale.linear().range([height, 0]);
+          yScale = d3.scale.linear().range([height, 0]).clamp(true);
           break;
         default:
           console.error("Unable to choose proper d3.scale for the Question 2's type.")
@@ -339,6 +341,8 @@
       .style('text-anchor', 'middle')
       .text(curQuestion2.attributes.short_short_title);
 
+      postTickCreation();
+
       // Modify default appearance of ticks on the axes.
       function tickModifier() {
 
@@ -384,6 +388,27 @@
 
       }
 
+      // For modifications to axis ticks after they've been created.
+      function postTickCreation() {
+
+        // For clamped scales, add a '+' to the end of the max tick label.
+        if (curQuestion1.type === 'text') {
+          if (xScale.clamp() === true) {
+            var s = svg.selectAll('.x .tick text').last();
+            var t = s.text();
+            s.text(t + '+');
+          }
+        }
+        if (curQuestion2.type === 'text') {
+          if (yScale.clamp() === true) {
+            var s = svg.selectAll('.y .tick text').last();
+            var t = s.text();
+            s.text(t + '+');
+          }
+        }
+
+      }
+
     }
 
     // Data notes:
@@ -402,7 +427,7 @@
       } else if (curQuestion.type === 'text') {
         // Manually set domain for salary questions, since there is no max/min provided in the questions JSON file.
         if (Number(iQuestionNum) === 20.1) {
-          result = [0, 1000000];
+          result = [0, 300000];
         } else if (Number(iQuestionNum) === 20.2) {
           result = [0, 1000];
         }
@@ -686,6 +711,15 @@
       });
 
   });
+
+  d3.selection.prototype.first = function() {
+    return d3.select(this[0][0]);
+  };
+
+  d3.selection.prototype.last = function() {
+    var last = this.size() - 1;
+    return d3.select(this[0][last]);
+  };
 
 </script>
 
