Downloaded JS files we were using CDN for. Better to have locally.

--- a/tool/index.html
+++ b/tool/index.html
@@ -91,10 +91,9 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.2/lodash.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"></script>
-  <script src="https://d3js.org/d3-queue.v3.min.js"></script>
+  <script src="js/jquery-3.1.1.min.js"></script>
+  <script src="js/lodash.min.js"></script>
+  <script src="js/d3.min.js"></script>
   <script src="dist/js/bootstrap.min.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="docs/assets/js/ie10-viewport-bug-workaround.js"></script>
