Copy edit via Jackie.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container">
 
       <div id="about-text">
-        <h2 style="color:#2A2B2C">How does a designer’s education level correlate with her annual salary? How are designers in different industries learning new skills?</h2>
+        <h2 style="color:#2A2B2C">How are designers learning new skills as they progress in their careers? Which design jobs have the highest salaries? Who has the craziest commute?</h2>
         <h2 style="color:#2A2B2C">Use this tool to hunt for patterns and trends in the <a href="http://designcensus.org/#!/">2016 AIGA Design Census</a> data. Find a compelling correlation and download the data to create a visualization of your own.</h2>
       </div>
 
@@ -67,12 +67,6 @@
           <h2 class="footer-text" style="color:#2A2B2C">The Data Explorer was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an art, design, and technology studio and data visualization partner of the 2016 Design Census.</h2>
         </div>
       </div>
-
-      <!-- <div class="container">
-        <div id="about-text">
-          <h2 style="color:#2A2B2C">The Design Census Data Explorer is a tool that shows patterns and trends in the <a href="http://designcensus.org/#!/">2016 AIGA Design Census</a>. With nearly 10,000 responses from across the nation, there are many stories and surprises to be revealed within the data. Find a compelling combination? Download your discoveries to a CSV file and create a visualization of your own. </h2>
-          <h2 style="color:#2A2B2C">This tool was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an art, design, and technology studio and the official data visualization partner of the 2016 Design Census.</h2>
-      </div> -->
 
       <br/><br/>
 
